--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,30 +3,29 @@ body{
 }
 
 .card-img-top {
-    max-width: 100%;
-    max-height: 100%
+    padding: 30px 0px 10px 0px;
 }
 
 .card{
     max-width: 200px;
-    max-height: 250px;
+    max-height: 260px;
 }
 
 .card-header,
 .card-footer{
+    position:absolute;
     padding: 0;
     width:100%;
     background-color: white;
-    white-space: nowrap;
+    left: 0;
+}
+
+.card-header{
+    top:0;
 }
 
 .card-footer{
-    position:absolute;
     bottom:0;
-}
-
-.images {
-    height: 210px;
 }
 
 img{
